# dotfiles

./: .ansible-lint  .gitignore  .tool-versions  .yamllint  .zsh_abbr  .zshrc  .zshrc_base  .zshrc_linux  .zshrc_macos  GROK.md  MANUAL_SPOTLIGHT_FIX.md  READEME.md  README.md  TODO.md  abbreviations  ansible.cfg  bootstrap-common.sh  bootstrap-linux.sh  bootstrap-macos.sh  bootstrap.sh  configure-raycast-spotlight.sh  dotfiles.yml  hosts  pyproject.toml  requirements.yml  starship.toml
.github/workflows/: ci.yml  main.yml
Raycast/: Raycast 2022-05-05 10.38.13.rayconfig  Raycast.rayconfig
docs/cheatsheets/: kitty.md  lazygit.md  nvim.md  terminal.md  tmux.md  vim.md
dotfile_templates/: .zshrc_base  .zshrc_macos  abbreviations_common  abbreviations_work  alacritty.toml  karabiner.json  kitty.conf  starship.toml  tmux.conf
dotfile_templates/alacritty/: alacritty.toml
dotfile_templates/fish/: config.fish
dotfile_templates/ghostty/: config
dotfile_templates/ghostty/themes/: warp-dark  warp-light
dotfile_templates/k9s/: config.yaml
dotfile_templates/karabiner/: karabiner.json
dotfile_templates/kitty/: Spacemacs_dark.conf  Spacemacs_light.conf  kitty.conf  test.css
dotfile_templates/nvim/: init.lua
dotfile_templates/starship/: starship.toml
dotfile_templates/tmux/: settings.conf  style.conf  tmux.conf  window.conf
dotfile_templates/zsh/: .zprofile  .zshrc  .zshrc_base  .zshrc_macos
iTerm2/: Default.json  com.googlecode.iterm2.plist  shades-of-purple.itermcolors
repo_config/: pre-commit
roles/fonts/: main.yml
roles/terminal/: main.yml
(+59 files in other folders)
