[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = "Dotfiles project with poetry to perform linting"
authors = ["Jerin Mathew <maxjerin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
yamllint = "^1.26.3"
ansible = "^5.3.0"
ansible-lint = "^5.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
